Set hero default image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,11 @@ layout: main
     {% if site.show_hero and paginator == nil or paginator.page == 1 %}
         <!-- Hero -->
         {% assign featured = posts.first %}
+        {% if featured.image %}
         <section class="hero" style="background-image: url({{ featured.image }})">
+        {% else %}
+        <section class="hero" style="background-image: url('/assets/img/off.jpg')">
+        {% endif %}
             <div class="pixels"></div>
             <div class="gradient"></div>
             <div class="content">
